popMenu span to div

--- a/js/templates/pageNav.html
+++ b/js/templates/pageNav.html
@@ -22,7 +22,7 @@
   <div class="btn btn-notifications ion-android-notifications custCol-primary fontSize14 js-navNotifications"></div>
 </div>
 <div class="popMenu popMenu-notifications hide js-navNotificationsMenu">
-    <span class="popMenu-notificationsHeader"><%= polyglot.t('nav.notifications') %></span>
+    <div class="popMenu-notificationsHeader"><%= polyglot.t('nav.notifications') %></div>
     <hr/>
     <div class="popMenu-notificationsContent"></div>
     <div class="popMenu-notificationsEmpty"><%= polyglot.t('nav.noNotifications') %></div>
