--- a/js/templates/notification.html
+++ b/js/templates/notification.html
@@ -1,13 +1,12 @@
 <div>
-    <div class="notification-avatar">
-        <% if(ob.avatarURL) { %>
-        <div class="thumbnail js-avatar" data-handle="<%- ob.avatarURL %>"
-          style="background-image: url(<%- ob.avatarURL %>), url(imgs/defaultUser.png);"></div>
-        <% } %>
-    </div>
+    <div class="thumbnail custCol-border-secondary"
+         style="background-image: url(<%- ob.avatarURL %>), url(imgs/defaultUser.png);"></div>
     <div class="notification-body">
         <div class="notification-text"><%- ob.title %></div>
-        <div class="notification-timestamp"></div>
+        <%- ob.handle %>
+        <%- ob.guid %>
+        <%- ob.type %>
+        <div class="notification-timestamp"><%- ob.timestamp %></div>
     </div>
     <div class="notification-orderActions hide">
         <button class="notification-orderActionYes"><%= polyglot.t('yes') %></button>
