--- a/js/templates/pageNav.html
+++ b/js/templates/pageNav.html
@@ -24,7 +24,7 @@
 <div class="popMenu popMenu-notifications hide js-navNotificationsMenu">
     <div class="popMenu-notificationsHeader"><%= polyglot.t('nav.notifications') %></div>
     <hr/>
-    <div id="notificationsPanel" class="popMenu-notificationsContent"></div>
+    <div id="notificationsPanel" class="popMenu-notificationsContent flex-border"></div>
 </div>
 
 <div class="ctrlGroup nav-profile">
