--- a/js/templates/notification.html
+++ b/js/templates/notification.html
@@ -1,4 +1,7 @@
-<div class="rowItem js-notification clickable padding2015">
+<div class="rowItem js-notification clickable padding2015
+  <% if(ob.read == true){ %>
+  hide
+  <% } %>">
     <div class="table">
         <div>
             <div class="thumbnail thumbnail-large-slim custCol-border-secondary"
